--- a/data_exploration/Super Brief Testing Model.ipynb
+++ b/data_exploration/Super Brief Testing Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b4e695db",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "53798d46",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7aaa9915",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a3f13d43",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "eb94593b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "26f5b02f",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a58fb134",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b6a3fa73",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "cf43be54",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "494e5fed",
    "metadata": {},
    "outputs": [],
@@ -158,12 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3c432a88",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a854fc6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import disable_caching\n",
+    "disable_caching()"
    ]
   },
   {
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "0c28a081",
    "metadata": {},
    "outputs": [],
@@ -198,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "5968b1da",
    "metadata": {},
    "outputs": [],
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b668f4e6",
    "metadata": {},
    "outputs": [],
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "07d2d0ea",
    "metadata": {},
    "outputs": [],
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "d874d298",
    "metadata": {},
    "outputs": [],
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "545d632d",
    "metadata": {},
    "outputs": [],
@@ -337,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "dd90cdfb",
    "metadata": {},
    "outputs": [],
@@ -347,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "284ea16b",
    "metadata": {},
    "outputs": [],
@@ -358,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "50166183",
    "metadata": {},
    "outputs": [],
@@ -369,7 +380,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "926f2711",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "9374dbfe",
    "metadata": {},
    "outputs": [
@@ -379,7 +398,7 @@
        "(42, 13)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "3fc252fb",
    "metadata": {},
    "outputs": [],
@@ -408,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "7119fc41",
    "metadata": {},
    "outputs": [],
@@ -443,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "7478206d",
    "metadata": {},
    "outputs": [],
@@ -468,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "26e38b19",
    "metadata": {},
    "outputs": [],
@@ -483,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "c09f5655",
    "metadata": {},
    "outputs": [
@@ -493,7 +512,7 @@
        "torch.Size([96, 1000])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "76567352",
    "metadata": {},
    "outputs": [],
@@ -522,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "8aeb7d06",
    "metadata": {},
    "outputs": [],
@@ -542,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "71d46879",
    "metadata": {},
    "outputs": [],
@@ -563,41 +582,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "d02a5a9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
-    "optimizer = optim.AdamW(model.parameters(), lr=1e-3)\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "losses = [nn.CrossEntropyLoss() for i in range(15)]"
+    "# optimizer = optim.AdamW(model.parameters(), lr=1e-3)\n",
+    "optimizer = optim.AdamW(model.parameters(), lr=1e-2)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "# losses = [nn.CrossEntropyLoss() for i in range(15)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "id": "21471e25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# int(labels[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "feaf06e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# heads[0](model(batch['input'].to(device)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "27d420a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0feec1e4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "49152512"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "int(labels[i])"
+    "sum(p.numel() for p in model.parameters())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "id": "0f1aaea8",
    "metadata": {},
    "outputs": [
@@ -605,36 +655,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0; Loss: 411.43996238708496\n",
-      "Epoch: 1; Loss: 409.0412788391113\n",
-      "Epoch: 2; Loss: 409.0412788391113\n",
-      "Epoch: 3; Loss: 409.0412788391113\n",
-      "Epoch: 4; Loss: 409.0412788391113\n"
+      "Epoch: 0; Loss: 395.4499931335449\n",
+      "Epoch: 1; Loss: 390.9515953063965\n",
+      "Epoch: 2; Loss: 390.9515953063965\n",
+      "Epoch: 3; Loss: 390.9515953063965\n",
+      "Epoch: 4; Loss: 390.9515953063965\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Sequential(\n",
-       "  (0): Flatten()\n",
-       "  (1): Linear(in_features=96000, out_features=512, bias=True)\n",
-       "  (2): ReLU()\n",
-       ")"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = model.to(device)\n",
     "heads = [h.to(device) for h in heads]\n",
     "model.train()\n",
+    "for h in heads:\n",
+    "    h.train()\n",
     "for epoch in range(5):\n",
     "    total_loss = 0\n",
     "#     for batch in train_loader:\n",
-    "        \n",
+    "    \n",
     "    for batch in train_dataset:\n",
     "        optimizer.zero_grad()\n",
     "        inputs = batch['input'].to(device)\n",
@@ -648,7 +686,8 @@
     "            target = torch.tensor([0, 0])\n",
     "            target[int(labels[i])] = 1\n",
     "            target = target.to(device)\n",
-    "            cur_loss = losses[i](per_head_outputs[i], target.float())\n",
+    "#             cur_loss = losses[i](per_head_outputs[i], target.float())\n",
+    "            cur_loss = criterion(per_head_outputs[i], target.float())\n",
     "            these_losses.append(cur_loss)\n",
     "#         loss = outputs[0]\n",
     "#         loss = criterion(outputs, labels)\n",
@@ -658,12 +697,14 @@
     "        total_loss += loss.item()\n",
     "    print(f\"Epoch: {epoch}; Loss: {total_loss}\")\n",
     "\n",
-    "model.eval()"
+    "model.eval()\n",
+    "for h in heads:\n",
+    "    h.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "id": "09949d83",
    "metadata": {},
    "outputs": [
@@ -671,17 +712,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1454/3039809088.py:1: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "/tmp/ipykernel_591/3039809088.py:1: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
       "  nn.functional.softmax(model(batch['input'].to(device))).sum()\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor(1., device='cuda:0', grad_fn=<SumBackward0>)"
+       "tensor(1.0000, device='cuda:0', grad_fn=<SumBackward0>)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,66 +733,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "c410f436",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-0.0255, -0.0454, -0.0275,  0.0358, -0.1361, -0.0021, -0.0321,  0.0438,\n",
-       "         0.0119,  0.0229,  0.0430,  0.0252,  0.0128,  0.0323, -0.0048],\n",
-       "       device='cuda:0', grad_fn=<AddBackward0>)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model(batch['input'].to(device))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "id": "54c72c45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0255, -0.0454, -0.0275,  0.0358, -0.1361, -0.0021, -0.0321,  0.0438,\n",
-       "         0.0119,  0.0229,  0.0430,  0.0252,  0.0128,  0.0323, -0.0048],\n",
-       "       device='cuda:0', grad_fn=<AddBackward0>)"
+       "torch.Size([512])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model(batch['input'].to(device))"
+    "model(batch['input'].to(device)).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "d000dce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-90.0000, -83.1713, -41.0784,  ..., -15.9120, -12.6763, -13.8083],\n",
+       "        [-90.0000, -80.2327, -40.2482,  ..., -12.3915, -10.9027, -11.1900],\n",
+       "        [-90.0000, -84.7838, -40.4864,  ..., -18.4723, -17.6609, -17.3068],\n",
+       "        ...,\n",
+       "        [-90.0000, -90.0000, -69.2793,  ..., -48.2913, -47.7806, -45.6311],\n",
+       "        [-90.0000, -90.0000, -71.5455,  ..., -58.2507, -60.5180, -59.1449],\n",
+       "        [-90.0000, -90.0000, -78.9282,  ..., -74.3284, -77.2679, -72.9447]],\n",
+       "       device='cuda:0')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batch['input'].to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
+   "id": "ed416537",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       device='cuda:0', dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "d070d4de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 0., 1., 0., 1., 0., 1., 0., 0., 0., 1., 0., 0., 0., 1., 0., 0., 0.,\n",
+       "        0., 1., 1., 0., 0., 1., 0., 1., 0., 1., 1., 0., 0., 0., 1., 1., 1., 0.,\n",
+       "        0., 0., 0., 1., 1., 0., 0., 0., 0., 0., 1., 0., 0., 1., 1., 1., 1., 1.,\n",
+       "        0., 0., 0., 1., 0., 1., 1., 1., 0., 1., 0., 1., 0., 0., 0., 1., 0., 0.,\n",
+       "        0., 0., 1., 1., 0., 0., 0., 0., 0., 1., 0., 0., 1., 1., 0., 1., 0., 0.,\n",
+       "        1., 1., 1., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "        1., 1., 1., 0., 0., 1., 0., 0., 0., 0., 0., 1., 1., 0., 1., 1., 1., 1.,\n",
+       "        0., 1., 0., 0., 0., 1., 0., 0., 1., 1., 1., 0., 0., 0., 0., 0., 1., 0.,\n",
+       "        0., 1., 0., 1., 0., 0., 0., 1., 1., 0., 1., 1., 0., 0., 1., 1., 0., 1.,\n",
+       "        1., 0., 1., 0., 1., 1., 1., 0., 1., 1., 1., 0., 0., 0., 1., 0., 0., 1.,\n",
+       "        1., 0., 1., 0., 1., 0., 1., 0., 1., 0., 0., 1., 0., 0., 0., 1., 1., 0.,\n",
+       "        1., 0., 0., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 1., 1., 0.,\n",
+       "        0., 0., 0., 1., 0., 1., 0., 0., 0., 1., 1., 0., 0., 1., 0., 0., 0., 1.,\n",
+       "        0., 0., 0., 0., 1., 0., 1., 0., 0., 1., 0., 1., 1., 0., 1., 1., 0., 1.,\n",
+       "        1., 0., 1., 0., 1., 1., 1., 1., 1., 1., 1., 1., 0., 1., 0., 0., 0., 1.,\n",
+       "        0., 0., 1., 1., 0., 0., 0., 0., 0., 0., 1., 1., 1., 0., 1., 1., 1., 0.,\n",
+       "        1., 1., 0., 0., 0., 0., 0., 0., 0., 1., 1., 1., 0., 1., 0., 1., 0., 0.,\n",
+       "        0., 1., 1., 1., 0., 1., 0., 1., 1., 0., 1., 1., 0., 1., 0., 0., 1., 1.,\n",
+       "        0., 0., 0., 0., 1., 1., 1., 0., 0., 1., 0., 1., 0., 1., 0., 0., 0., 1.,\n",
+       "        1., 1., 0., 0., 0., 0., 0., 0., 1., 1., 1., 0., 0., 1., 0., 0., 1., 0.,\n",
+       "        1., 1., 0., 0., 0., 1., 0., 0., 1., 0., 0., 0., 1., 1., 0., 1., 0., 1.,\n",
+       "        0., 1., 1., 1., 1., 0., 0., 1., 1., 0., 1., 1., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 1., 0., 0., 0., 1., 0., 0., 0., 0., 1., 1., 0., 0., 1., 1., 0., 0.,\n",
+       "        0., 1., 1., 1., 0., 1., 0., 1., 0., 1., 0., 0., 0., 1., 0., 1., 0., 0.,\n",
+       "        0., 1., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 1., 1., 0., 1.,\n",
+       "        1., 0., 1., 0., 1., 1., 1., 1., 1., 0., 0., 1., 0., 1., 1., 1., 1., 0.,\n",
+       "        0., 0., 0., 1., 0., 0., 1., 0., 0., 0., 1., 0., 0., 1., 0., 0., 1., 0.,\n",
+       "        1., 0., 1., 0., 1., 1., 1., 0., 0., 1., 0., 0., 0., 1., 1., 1., 1., 0.,\n",
+       "        1., 1., 0., 1., 0., 0., 0., 0.], device='cuda:0')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "50d9bd6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (15) must match the size of tensor b (512) at non-singleton dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [64]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m outputs[outputs \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     10\u001b[0m outputs[outputs \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 11\u001b[0m total_correct \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m (\u001b[43mlabels\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[43moutputs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcpu\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m     12\u001b[0m total_values \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(labels)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (15) must match the size of tensor b (512) at non-singleton dimension 0"
+     ]
+    }
+   ],
    "source": [
     "with torch.no_grad():\n",
     "#     a = model(dataset[2]['input'].to(device))\n",
